<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainWrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/heavy_gray"
    android:orientation="vertical"
    tools:context=".ReceiptActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/rAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:background="@color/white">


        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/calm_red"
            app:title="@string/receiptTitle"
            app:titleTextColor="@color/white"
            app:buttonGravity="center_vertical"
            app:titleMarginStart="20dp">

            <Button
                android:id="@+id/backBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_baseline_arrow_back_24"
                android:backgroundTint="@color/white"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:onClick="openAlertDialogCancel"/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:id="@+id/r_receiptPaper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:src="@drawable/carls_juniors"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/rcAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/r_address"
            android:gravity="center"
            android:textSize="19sp"/>
        <TextView
            android:id="@+id/rcAddress2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/r_address2"
            android:gravity="center"
            android:textSize="19sp"/>
        <TextView
            android:id="@+id/rcPhoneNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/r_phone"
            android:gravity="center"
            android:textSize="19sp"/>

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="?android:attr/listDivider" />
        <LinearLayout
            android:id="@+id/rc_dateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">
            <TextView
                android:id="@+id/rcDate"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/r_date"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/r_smc_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r_semicolon"
                android:textSize="17sp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/r_dateVal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:gravity="end"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rc_idOrderLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">
            <TextView
                android:id="@+id/rcIdOrder"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/r_idOrder"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/r_smc_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r_semicolon"
                android:textSize="17sp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/r_idVal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:gravity="end"
                android:text="@string/r_defaultId"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/rc_nameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">
            <TextView
                android:id="@+id/rcName"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/r_orderer"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/r_smc_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r_semicolon"
                android:textSize="17sp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/r_nameVal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:gravity="end"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rc_cashierLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">
            <TextView
                android:id="@+id/rcCashier"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/r_cashier"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/r_smc_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r_semicolon"
                android:textSize="17sp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/r_cashierVal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:gravity="end"
                android:text="@string/r_defaultCashier"/>
        </LinearLayout>
        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:id="@+id/rc_food1Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">
            <TextView
                android:id="@+id/rcFood1"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/r_amount1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/r_food1Val"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:gravity="end" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rc_food2Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">
            <TextView
                android:id="@+id/rcFood2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/r_amount2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/r_food2Val"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:gravity="end" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/rc_food3Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">
            <TextView
                android:id="@+id/rcFood3"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/r_amount3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/r_food3Val"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:gravity="end" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/rc_drink1Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">
            <TextView
                android:id="@+id/rcDrink1"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/r_amount4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/r_drink1Val"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:gravity="end" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/rc_drink2Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">
            <TextView
                android:id="@+id/rcDrink2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/r_amount5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/r_drink2Val"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:gravity="end" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rc_drink3Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">
            <TextView
                android:id="@+id/rcDrink3"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/r_amount6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/r_drink3Val"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:gravity="end" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>